--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,6 +34,7 @@ subjects:
 - !lcsh 'Great Britain -- Colonies -- Africa -- Administration -- Fiction'
 - !lcc 'PR'
 - !lcsh 'Short stories, English'
+- GITenberg
 tableOfContents: 'Prologue: Sanders, C.M.G. -- Hamilton of the Houssas -- The disciplinarians
   -- The lost N''bosini -- The fetish stick -- A frontier and a code -- The soul of
   the native woman -- The stranger who walked by night -- A right of way -- The green
